<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#a9a9a9" >
    
    
    <LinearLayout
	    android:id="@+id/authormanage"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="2dp"
	    android:layout_weight="1"
	    android:background="#dcdcdc" >
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="15dp"
	        android:src="@drawable/test1" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="#dcdcdc"
	        android:gravity="center"
	        android:text="@string/authormanage" />
	
	</LinearLayout>
	
	
	<LinearLayout
	    android:id="@+id/netcontrol"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="2dp"
	    android:layout_weight="1"
	    android:background="#dcdcdc" >
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="15dp"
	        android:src="@drawable/test4" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="#dcdcdc"
	        android:gravity="center"
	        android:text="@string/netcontrol" />
	
	</LinearLayout>
    
	<LinearLayout
	    android:id="@+id/rammanager"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="2dp"
	    android:layout_weight="1"
	    android:background="#dcdcdc" >
	
	    <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="15dp"
	        android:src="@drawable/test5" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="#dcdcdc"
	        android:gravity="center"
	        android:text="@string/rammanager" />
	
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/unloadapp"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="2dp"
	    android:layout_weight="1"
	    android:background="#dcdcdc" >
	
	    <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="15dp"
	        android:src="@drawable/test8" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="#dcdcdc"
	        android:gravity="center"
	        android:text="@string/unloadapp" />
	
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/complaint"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="2dp"
	    android:layout_weight="1"
	    android:background="#dcdcdc" >
	
	    <ImageView
	        android:id="@+id/imageView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="15dp"
	        android:src="@drawable/test9" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="#dcdcdc"
	        android:gravity="center"
	        android:text="@string/complaint" />
	
	</LinearLayout>
	

</LinearLayout>
